--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,55 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: darkgray;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+h1,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color:coral;
+  transition: all 250ms linear;
+}
+.active {
+    color: 'blue';
+    border-bottom: 3px solid 'blue';
+  }
+a:hover {
+    cursor: pointer;
+    color: rgb(255, 251, 0);
+    transition: all 250ms linear;
+  }
+.active {
+    color: rgb(255, 251, 0);;
+  
+  }
+
+ul {
+  list-style-type: none;
 }
